# dfixxer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  example.toml
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
debug-pascal-code/: broken.pas  exponent_test.pas  generic_test.pas  project9.pas  repro_assert_lt_length_exprtpl_error.pas  simple.pas  treesitter-error-repro_combined_recovery_drift_generics.pas  treesitter-repro_for_var_in_foreach.pas  treesitter-repro_inline_const_block_const.pas  unary_minus_demo.pas  unary_plus_demo.pas
doc/: ast-context-gated-spacing-feasibility.md  ast-hint-resilience-plan.md  technical_behaviour.md
examples/: project9.pas  simple.pas  test_with_comments.pas
plans/: Requirements Spec_transform_text.md  inline_suppression_directives.md  space_after_comma.md  text_transform_optimization.md
src/: arguments.rs  dfixxer_error.rs  main.rs  options.rs  parser.rs  replacements.rs  single_keyword_section.rs  suppression.rs  transform_control_statement_body_wrapping.rs  transform_inherited_calls.rs  transform_inline_local_var_definitions.rs  transform_local_routine_indentation.rs  transform_local_routine_spacing.rs  transform_procedure_section.rs  transform_single_keyword_sections.rs  transform_space_after_comma.rs  transform_text.rs  transform_unit_program_section.rs  transform_uses_section.rs  transformer_utility.rs  unit_program_section.rs  uses_section.rs
test-data/: dfixxer.toml
tests/: cli_smoke.rs
tmp-issue6-investigation/: custom.toml  dfixxer.toml
(+123 files in other folders)
