[package]
name = "dfixxer"
version = "0.4.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25.8"
tree-sitter-pascal = "0.10.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2.5.0"

[dev-dependencies]
