[package]
name = "dfixxer"
version = "0.10.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25.8"
tree-sitter-pascal = { version = "0.10.3", git = "https://github.com/tuncb/tree-sitter-pascal-dfixxer-fork" }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2.5.0"
glob = "0.3"
diffy = "0.4"
icu_collator = { version = "2.0.0", features = ["compiled_data"] }

[dev-dependencies]
